syntax = "proto3";

package auth;

option go_package = ".pkg/pb";

service AuthService {
    rpc Register(RegisterRequest) returns (ResgisterResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
}
// Register 
message RegisterRequest{
    string email = 1;
    string password = 2;
}

message ResgisterResponse{
    int64 status = 1;
    string error = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    int64 status = 1;
    string error = 2;
    string token = 3;
}